feat(demo): 添加demo雏形

--- a/example/index.html
+++ b/example/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/app.css">
   <title>小蝴蝶demo</title>
 </head>
 <body>
   <div id="main"></div>
+  <script src="/app.js"></script>
 </body>
 </html>
