--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>小蝴蝶demo</title>
+  <link rel="icon" id="favicon" href="/static/logo.png" type="image/x-icon" />
+  <title>Butterfly-A JavaScript based data driven nodal choreography component library</title>
 </head>
 <body>
   <div id="main"></div>
