feat: 增加二级目录butterfly-dag

--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <div id="main"></div>
-  <script src="/app.js"></script>
+  <script src="/butterfly-dag/app.js"></script>
 </body>
 </html>
