--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" id="favicon" href="/static/logo.png" type="image/x-icon" />
+  <link href="//at.alicdn.com/t/font_1682597_i8e4t4hezrp.css" type="text/css" rel="stylesheet" />
   <title>Butterfly-A JavaScript based data driven nodal choreography component library</title>
 </head>
 <body>
