feat: 增加前端埋点

--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,11 @@
   <title>Butterfly-A JavaScript based data driven nodal choreography component library</title>
 </head>
 <body>
-  <div id="main"></div>
+  <div id="main">
+  </div>
   <script src="/butterfly-dag/app.js"></script>
+  <div class="cnzz">
+    <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280215703'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1280215703%26online%3D2' type='text/javascript'%3E%3C/script%3E"));</script>
+  </div>
 </body>
 </html>
